--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="/node_modules/lato-font/css/lato-font.css">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <app-root></app-root>
